# ACE-AGI

./: ACE_FINAL_STATUS.txt  COMPLETED_TODO.md  COMPLETE_DEPLOYMENT_GUIDE.md  Cargo.toml  DEPLOYMENT_CHECKLIST.txt  DEPLOYMENT_CHECKLIST_ACE.txt  DEPLOYMENT_README.md  DEPLOYMENT_README_ACE.md  MANUAL_DEPLOYMENT_INSTRUCTIONS.txt  QUICK_START_GUIDE.txt  README.md  SOVEREIGN_CYCLE20_READY.txt  TODO.md  autonomous_deploy.py  axiomhive_ace_flask.py  axiomhive_flask.py  deploy.py  heroku_deploy.py  html_deploy.py  package_for_ace_deployment.py  package_for_deployment.py  package_for_deployment_fixed.py  passenger_wsgi.py  passenger_wsgi_ace.py  requirements.txt  resolver.py  script.js  setup_deployment.py  simple_ace_test.py  simple_deploy.py  test_ace_nexus.py  test_nexus.py
ACE_SHARPER_5D_FINAL/: deploy_now.py  final_setup.py  master_deploy.py  setup.sh  styles.css
ace_complete_deployment/: ACE_DEPLOYMENT_SUCCESS.txt
ace_deployment/: DEPLOYMENT_MANIFEST.txt  HTML_DEPLOYMENT_README.md  README.md  ace_html_interface.html  index.html
python/: embedding_model.py  embedding_model_fixed.py  llm_inference.py  sovereign_cli.py  sovereign_demo.py  sovereign_demo_final.py  sovereign_demo_fixed.py  sovereign_working.py
python/agents/: causal_agent.py  viral_agent.py
sovereign_cycle20_deployment/: run_sovereign.sh  setup_sovereign.py
src/: orchestrator.py  orchestrator.rs
